<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="category_daymonth">Day and month cycle</string>
    <string name="category_othersettings">Other settings</string>
    <string name="category_settings">Settings</string>
    <string name="category_thisprogram">This App</string>
    <string name="xpixels">%d</string>
    <string name="xdegrees">%d degrees</string>
    <string name="app_name">Colored Boxes Live Wallpaper</string>
 <string name="close">Close this box</string>
 <string name="nowaytoshare">There are no applications installed to help you share this app.</string>
 <string name="about">About this app</string>
  <string name="aboutmessage">Licensed under the Expat License.\n\nCopyright &#169; 2013 Peter Occil\nhttp://www.upokecenter.com/\n\nPermission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \'Software\'), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED \'AS IS\', WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.</string>
 <string name="share">Share this app</string>
 <string name="sharevia">Share this app using</string>
 <string name="description">Draws boxes on your screen that change color with the day and month cycle.</string>
 <string name="sharetext">I\'m using Colored Boxes Live Wallpaper for Android. Learn more: http://www.upokecenter.com/projects/colorwallpaper</string>
  <string name="sharesubject">I\'m using Colored Boxes Live Wallpaper for Android</string>
 <string name="donate">Donate to this app\'s author</string>
 <string name="fadeinboxes">Fade in boxes drawn</string>
 <string name="usedaycycle">Enable day cycle</string>
    <string name="summary_usedaycycle">Boxes become darker at night and lighter at day</string>
 <string name="uselocation">Use your location</string>
    <string name="summary_uselocation">Detects your location to help find out if it\'s day or night</string>
    <string name="reacttotaps">React to screen tap</string>
    <string name="summary_reacttotaps">Draw colored boxes where you tap the home screen</string>
    <string name="usemonthcycle">Enable month cycle</string>
 <string name="choosepicture">Choose or get a picture with</string>
    <string name="homepage">App homepage</string>
    <string name="drawspeedfps">Box drawing speed</string>
 <string name="usemodelbg">Use model background picture</string>
    <string name="picture">Model background picture</string>
    <string name="summary_picture">%s</string>
    <string name="summary_drawspeedfps">Up to %d FPS</string>
 <string name="summary_usemonthcycle">Boxes change color as the month progresses</string>
    <string name="boxsize">Maximum box size</string>
    <string name="summary_boxsize">%d</string>
 <string name="colorhue">Boxes\' color wheel hue</string>
    <string name="summary_colorhue">%s degrees</string>
 <string-array name="values_drawspeed">
        <item>slow</item>
        <item>medium</item>
        <item>fast</item>
    </string-array>
    <string-array name="entries_drawspeed">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
    </string-array>
    <string-array name="entries_launcher">
        <item>Settings</item>
        <item>Show Live Wallpaper List</item>
    </string-array>
    <string-array name="entries_launcher_jellybean">
        <item>Settings</item>
        <item>Enable This Wallpaper</item>
    </string-array>
    
</resources>